# alexandria

./: .env.example  .gitignore  LICENSE  README.md  TODOs.md  alexandria.sh  debug_large_file.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_interrupt.py  test_keybinds.py
conf/: logging_config.json
docs/: CONTRIBUTING.md  LICENSE.md  RAG_Integration_Guide.md  TODOs.html  UI_RAG_Integration.md  UserGuide.md  dual_keybind_implementation.md  userguide.md
src/: .scratch.kate-swp  configs.py  conversation.py  db_models.py  llm_db_loggers.py  llm_loggers.py  llm_models.py  logger.py  model_calls.py  models.py  retrievers.py  scratch  userland.py  vllm_endpoints.py  vllm_model_calls.py
src/core/: __init__.py
src/core/context/: context_window.py  prompt_manager.py
src/core/embedding/: embedder.py
src/core/generation/: llm_generator.py  rag.py
src/core/ingestion/: README.md  __init__.py  (+7 more)
src/db/: __init__.py  db_config.py  db_init.py  db_models.py  db_utils.py
src/infrastructure/: db_connector.py  embedder.py  llm_controller.py
src/llm/: context_manager.py  conversation.py  conversation_manager.py  db_connector.py  llm_controller.py  llm_db_cnvs_controller.py  llm_db_controller.py  llm_db_loggers.py  llm_db_msg_controller.py  llm_handler.py  llm_prompt_controller.py  prompt_manager.py  service_llm.py  service_msg.py  service_right_pane.py
src/ui/: __init__.py  keybindings.py  layout.py  markdown_formatter.py  state_manager.py
src/utils/: __init__.py  file_utils.py  ingestion_cli.py  rag_cli.py  retrieval_cli.py
tests/: README.md
(+33 files in other folders)
