[project]
name = "alexandria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bleach>=6.0.0",
    "pgvector>=0.2.0",
    "prompt-toolkit>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
